Fix PlaceData and AlarnService Weather API works correctly
TODO: Fix AlarmWeatherConditions